# pytest-pgsql

./: .editorconfig  .gitignore  .pylintrc  AUTHORS  CONTRIBUTING.rst  ChangeLog  LICENSE  Makefile  README.rst  circle.yml  deploy.py  deploy_requirements.txt  dev_requirements.txt  requirements.txt  rtd_requirements.txt  setup.cfg  setup.py  temple.yaml  test_requirements.txt  tox.ini
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst  installation.rst  release_notes.rst  toc.rst
pytest_pgsql/: __init__.py  database.py  errors.py  ext.py  plugin.py  time.py  version.py
pytest_pgsql/tests/: conftest.py  database_test.py  ext_test.py  plugin_test.py  time_test.py
