[metadata]
name = pytest-pgsql
author = Clover Health
author-email = dev@cloverhealth.com
summary = Pytest plugins and helpers for tests using a Postgres database.
description-file = README.rst
home-page = https://github.com/CloverHealth/pytest-pgsql
python-requires = >=3.4
license = Copyright Clover Health, Inc.
classifier =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Database
    Topic :: Software Development :: Testing

[coverage:run]
branch = True
source = pytest_pgsql

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't cover defensive assertion code
    raise AssertionError
    raise NotImplementedError
show_missing = 1
fail_under = 100

[entry_points]
pytest11 =
    pytest_pgsql = pytest_pgsql.plugin

[files]
packages = pytest_pgsql

[flake8]
max-complexity = 10
max-line-length = 99

[pylint]
# Pylint rules are defined in .pylintrc since it has no setup.cfg configuration
